Added sections for the main section

--- a/practice_git.html
+++ b/practice_git.html
@@ -11,7 +11,21 @@
       <h1>HEADER</h1>
     </header>
     <main>
-      <h2>MAIN</h2>
+      <section>
+        <h2>Pulling repositories</h2>
+      </section>
+      <section>
+        <h2>Pushing repositories</h2>
+      </section>
+      <section>
+        <h2>Cloning repositories</h2>
+      </section>
+      <section>
+        <h2>Repositories issues</h2>
+      </section>
+      <section>
+        <h2>Version controls</h2>
+      </section>
     </main>
     <footer>
       <h3>FOOTER</h3>
