Added tables for notes for each section in the main

--- a/practice_git.html
+++ b/practice_git.html
@@ -13,18 +13,68 @@
     <main>
       <section>
         <h2>Pulling repositories</h2>
+        <table>
+          <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+          </tr>
+          <tr>
+            <td>Note 1</td>
+            <td>Note 2</td>
+          </tr>
+        </table>
       </section>
       <section>
         <h2>Pushing repositories</h2>
+        <table>
+          <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+          </tr>
+          <tr>
+            <td>Note 1</td>
+            <td>Note 2</td>
+          </tr>
+        </table>
       </section>
       <section>
         <h2>Cloning repositories</h2>
+        <table>
+          <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+          </tr>
+          <tr>
+            <td>Note 1</td>
+            <td>Note 2</td>
+          </tr>
+        </table>
       </section>
       <section>
         <h2>Repositories issues</h2>
+        <table>
+          <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+          </tr>
+          <tr>
+            <td>Note 1</td>
+            <td>Note 2</td>
+          </tr>
+        </table>
       </section>
       <section>
         <h2>Version controls</h2>
+        <table>
+          <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+          </tr>
+          <tr>
+            <td>Note 1</td>
+            <td>Note 2</td>
+          </tr>
+        </table>
       </section>
     </main>
     <footer>
