Added content to the page

--- a/practice_git.html
+++ b/practice_git.html
@@ -12,72 +12,116 @@
       <h1>HEADER</h1>
     </header>
     <main>
-      <section>
-        <h2>Pulling repositories</h2>
-        <table>
-          <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-          </tr>
-          <tr>
-            <td>Note 1</td>
-            <td>Note 2</td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Pushing repositories</h2>
-        <table>
-          <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-          </tr>
-          <tr>
-            <td>Note 1</td>
-            <td>Note 2</td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Cloning repositories</h2>
-        <table>
-          <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-          </tr>
-          <tr>
-            <td>Note 1</td>
-            <td>Note 2</td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Repositories issues</h2>
-        <table>
-          <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-          </tr>
-          <tr>
-            <td>Note 1</td>
-            <td>Note 2</td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>Version controls</h2>
-        <table>
-          <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-          </tr>
-          <tr>
-            <td>Note 1</td>
-            <td>Note 2</td>
-          </tr>
-        </table>
-      </section>
+      <aside>
+        <h3>Usefull info</h3>
+        <p>
+          <a
+            target="_blank"
+            href="https://education.github.com/git-cheat-sheet-education.pdf"
+            >Git Cheat sheet</a
+          >
+        </p>
+        <p>Always pull the main repusotory before making any changes.</p>
+
+        <p>Create issues and new branches for each task.</p>
+        <p>
+          Merge your branches once you are sure the task has been completed and
+          then close the issue for the task.
+        </p>
+        <p>
+          Sepparate issues based on the level of the page you are working on.
+        </p>
+        <p>Add and commit the changes before you push your code.</p>
+        <p>Push the changes once you have completed a task.</p>
+      </aside>
+      <div>
+        <section>
+          <h2>Pulling repositories</h2>
+          <table>
+            <tr>
+              <th>Git command</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>git pull origin <br />[repository-name]</td>
+              <td>Pulls the GitHub code from the named repository</td>
+            </tr>
+          </table>
+        </section>
+        <section>
+          <h2>Pushing repositories</h2>
+          <table>
+            <tr>
+              <th>Git command</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>git push origin <br />[repository-name]</td>
+              <td>Pushes the local code to the named repository on GitHub</td>
+            </tr>
+          </table>
+        </section>
+        <section>
+          <h2>Cloning repositories</h2>
+          <table>
+            <tr>
+              <th>Git command</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>git clone [SSH from GitHub]</td>
+              <td>Creates a local copy of the GitHub repostory</td>
+            </tr>
+          </table>
+        </section>
+        <section>
+          <h2>Version controls</h2>
+          <table>
+            <tr>
+              <th>Git command</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>git checkout [branch name]</td>
+              <td>Switches to an existing branch</td>
+            </tr>
+            <tr>
+              <td>git checkout -b [branch name]</td>
+              <td>Switches to a new branch</td>
+            </tr>
+          </table>
+        </section>
+        <section>
+          <h2>Repositories issues</h2>
+          <table>
+            <tr>
+              <th>Step</th>
+              <th>Explanation</th>
+            </tr>
+            <tr>
+              <td>Open issue</td>
+              <td>Create issues to be able to track them easier</td>
+            </tr>
+            <tr>
+              <td>Issue element</td>
+            </tr>
+            <tr>
+              <td class="right">Title</td>
+              <td>The name of the issue</td>
+            </tr>
+            <tr>
+              <td class="right">Description</td>
+              <td>User story</td>
+            </tr>
+            <tr>
+              <td>Close issue</td>
+              <td>Once everything is done close the issue</td>
+            </tr>
+          </table>
+        </section>
+      </div>
     </main>
+
     <footer>
       <h3>FOOTER</h3>
     </footer>
