Corrected some of the content

--- a/practice_git.html
+++ b/practice_git.html
@@ -43,8 +43,8 @@
               <th>Explanation</th>
             </tr>
             <tr>
-              <td>git pull origin <br />[repository-name]</td>
-              <td>Pulls the GitHub code from the named repository</td>
+              <td>git pull origin <br />[branch-name]</td>
+              <td>Pulls the GitHub code from the named branch</td>
             </tr>
           </table>
         </section>
@@ -56,8 +56,8 @@
               <th>Explanation</th>
             </tr>
             <tr>
-              <td>git push origin <br />[repository-name]</td>
-              <td>Pushes the local code to the named repository on GitHub</td>
+              <td>git push origin <br />[branch-name]</td>
+              <td>Pushes the local code to the named branch on GitHub</td>
             </tr>
           </table>
         </section>
